[project]
name = "hud-remote-browser"
version = "0.1.0"
description = "HUD Remote Browser Controller with MCP tools for cloud browser providers"
requires-python = ">=3.11,<3.13"
dependencies = [ "hud-python[agents] @ git+https://github.com/hud-evals/hud-python@b4f1ab6f5de841bb77fe890eb4d8fe7b628a9937", "pyautogui", "playwright", "httpx", "typer", "google-api-python-client", "google-auth",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
hud-remote-browser = "hud_controller.__main__:main"

[tool.hud]
image = "hud-remote-browser:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/hud_controller",]
